// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on Android the button with type cancel 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#686e7d",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type confirm 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#4459ff",
          "minHeight": 50,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type danger 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ca3542",
          "borderColor": "#ca3542",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type info 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#4459ff",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type inverse-transparent 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type normal 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#4459ff",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type onOverlay 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "borderColor": "#ffffff",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type orange 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "borderColor": "#9a6300",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type secondary 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#b7bbc8",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type transparent 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderWidth": 0,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on iOS the button with type cancel 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#686e7d",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#686e7d",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type confirm 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "#4459ff",
        "minHeight": 50,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#ffffff",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type danger 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "#ca3542",
        "borderColor": "#ca3542",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#ffffff",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type info 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#4459ff",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#4459ff",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type inverse-transparent 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#ffffff",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type normal 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "#4459ff",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#4459ff",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type onOverlay 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "borderColor": "#ffffff",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#ffffff",
        "fontFamily": "Geist-Bold",
        "fontSize": 18,
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type orange 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "borderColor": "#9a6300",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#9a6300",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type secondary 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#121314",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type transparent 1`] = `
<Button
  accessibilityRole="button"
  containerStyle={
    [
      {
        "borderRadius": 12,
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    [
      {
        "fontFamily": "Geist-Bold",
        "fontSize": 14,
        "textAlign": "center",
      },
      {
        "color": "#ffffff",
        "fontFamily": "Geist-Bold",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;
